# jatkoyhdyssana

./: .gitignore  Makefile  jatkoyhdys.py
data/kotus-sanalista/: kotus-sanalista_v1.xml.zst
jatkoyhdyssana-rs/: Cargo.toml
jatkoyhdyssana-rs/src/: main.rs
py/: jatkoyhdys.py
tweeter/: requirements.in  tweet_jys.py
