[package]
name = "jatkoyhdyssana"
version = "0.1.0"
authors = ["Aarni Koskela <akx@iki.fi>"]
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
indicatif = {version = "0.15.0", features = ["rayon"]}
array-init = "0.1.1"
rayon = "1.4.0"
logging_timer = "1.0.0"
simple_logger = "1.9.0"
